# ensembl-py

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .licenserc.yml  .travis.yml  404.html  MANIFEST.in  NOTICE  README.md  conftest.py  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pylintrc  pyproject.toml  pytest.ini  requirement-test.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/actions/python_build/: action.yml
.github/workflows/: ci.yml  ci_dev.yml  documentation.yml  publish.yml  python_ci.yml
.gitlab/scripts/: check_license.py
.gitlab/templates/: notice.tpl
code_of_conduct/: index.html
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_05031fe2797b4987_xref_source_db_model_py.html  z_05031fe2797b4987_xref_update_db_model_py.html  z_9b4cf1889125f5ee___init___py.html  z_9b4cf1889125f5ee_models_py.html  z_e6247660a5c95ebc___init___py.html  z_e6247660a5c95ebc_utils_py.html  z_e86c6d0292af4f4c___init___py.html  z_e86c6d0292af4f4c_models_py.html
docs/: Makefile  conf.py  gen_ref_pages.py  index.md  index.rst  install.md  install.rst
docs/scripts/: gen_ref_pages.py
docs/setup/: Makefile  build_docs.sh
docs/source/: conf.py  install.rst
docs/source/_static/: style.css
docs/source/_templates/: layout.html
install/: index.html
reference/core/: index.html
reference/core/models/: index.html
reference/database/: index.html
reference/database/dbconnection/: index.html
reference/database/unittestdb/: index.html
reference/hive/: index.html
reference/hive/HiveRESTClient/: index.html
reference/ncbi_taxonomy/: index.html
reference/ncbi_taxonomy/api/: index.html
reference/ncbi_taxonomy/api/utils/: index.html
reference/ncbi_taxonomy/models/: index.html
reference/plugins/: index.html
reference/plugins/pytest_unittest/: index.html
reference/python/ensembl/core/: index.html
reference/python/ensembl/core/models/: index.html
reference/python/ensembl/ncbi_taxonomy/: index.html
reference/python/ensembl/ncbi_taxonomy/api/: index.html
reference/python/ensembl/ncbi_taxonomy/api/utils/: index.html
reference/python/ensembl/ncbi_taxonomy/models/: index.html
reference/python/ensembl/xrefs/xref_source_db_model/: index.html
reference/python/ensembl/xrefs/xref_update_db_model/: index.html
reference/python/tests/conftest/: index.html
reference/python/tests/core/compare_core_model/: index.html
reference/python/tests/core/test_core/: index.html
reference/python/tests/ncbi_taxonomy/test_ncbi_taxonomy/: index.html
reference/python/tests/xrefs/test_xref_source/: index.html
reference/python/tests/xrefs/test_xref_update/: index.html
reference/summary/: index.html
reference/utils/: index.html
reference/utils/archive/: index.html
reference/utils/argparse/: index.html
reference/utils/logging/: index.html
reference/utils/rloader/: index.html
reference/xrefs/xref_source_db_model/: index.html
reference/xrefs/xref_update_db_model/: index.html
scripts/: build_docs.sh
scripts/travis/: docs_harness.sh  pylint_harness.sh
search/: search_index.json
src/python/ensembl/: pytest_unittest.py
src/python/ensembl/core/: __init__.py  models.py
src/python/ensembl/database/: __init__.py  dbconnection.py  unittestdb.py
src/python/ensembl/hive/: HiveRESTClient.py  __init__.py
src/python/ensembl/ncbi_taxonomy/: __init__.py  models.py
src/python/ensembl/ncbi_taxonomy/api/: __init__.py  utils.py
src/python/ensembl/plugins/: __init__.py  pytest_unittest.py
src/python/ensembl/utils/: __init__.py  archive.py  argparse.py  logging.py  rloader.py
src/python/ensembl/xrefs/: xref_source_db_model.py  xref_update_db_model.py
src/python/tests/: test_database.py  test_ncbi_taxonomy.py
src/python/tests/core/: compare_core_model.py  test_core.py
src/python/tests/data/mock_db/: gibberish.txt
src/python/tests/databases/mock_db/: table.sql
src/python/tests/ncbi_taxonomy/: test_ncbi_taxonomy.py
src/python/tests/ncbi_taxonomy/test_ncbi_taxonomy/ncbi_db/: ncbi_taxa_name.txt  ncbi_taxa_node.txt  table.sql
src/python/tests/utils/: test_rloader.py
src/python/tests/utils/test_rloader/: sample.yml
src/python/tests/xrefs/: test_xref_source.py  test_xref_update.py
src/tests/: conftest.py  pytest.ini  test_alive.py  test_database.py  test_ncbi_taxonomy.py
src/tests/databases/mock_db/: table.sql
src/tests/databases/ncbi_db/: table.sql
src/tests/hive/: hive.in  hive.out  rest.py  test_hive.py  test_rest.py
src/tests/utils/: test_loader.py  test_rloader.py
stylesheets/: extra.css
