# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "ensembl-py"
description = "Ensembl Python Base Library"
requires-python = ">= 3.8"
version = "0.1"
readme = "README.md"
authors = [
    {name = "Ensembl", email = "dev@ensembl.org"},
]
license = {text = "Apache License 2.0"}
keywords = [
    "ensembl",
    "bioinformatics",
    "python",
    "setup",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ensembl-hive @ git+https://github.com/Ensembl/ensembl-hive.git@main",
    "mysqlclient >= 1.4.6",
    "pytest >= 5.2.1",
    "pytest-dependency == 0.5.1",
    "python-dotenv ~= 0.19.2",
    "PyYAML ~= 6.0",
    "requests >= 2.22.0",
    "sqlalchemy ~= 1.4.0",
    "SQLAlchemy-Utils ~= 0.37.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "mock",
    "mypy",
    "pylint",
    "pytest",
    "requests-mock >= 1.8.0",
    "Sphinx",
    "sphinx-rtd-theme",
]
doc = [
    "mock",
    "Sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
homepage = "https://www.ensembl.org"
repository = "https://github.com/Ensembl/ensembl-py"

[project.scripts]
# <cmd_name> = "ensembl.<module>:<function>"

[project.entry-points.pytest11]
ensembl_unittest = "ensembl.plugins.pytest_unittest"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.dynamic]
version = {attr = "ensembl.__version__"}

[tool.setuptools.packages.find]
where = ["src/python"]

# For additional information on `setuptools` configuration see:
#    https://setuptools.pypa.io/en/latest/userguide/quickstart.html
#    https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
#    https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel"
]

[tool.black]
line-length = 110

[tool.pylint.main]
max-line-length = 110
disable = [
    "invalid-name",
    "similarities",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "unspecified-encoding",
    "wildcard-import",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-v --tb=native --server=sqlite:///"
norecursedirs = [
    "apps",
    "basic_modules",
    "data",
    "docs",
    "env",
    "tmp*",
    "*.egg_info",
]
testpaths = ["src/tests"]

[tool.coverage.run]
branch = true
source = [
    "src/python/ensembl",
]
